@@ -5,6 +5,9 @@ Changes from cgkit-2.0.0alpha8 to cgkit-2.0.0alpha9:
 
 Bug fixes/enhancements:
 
+- ObjMaterial: Texture maps were rendered with a filter width of 0.01 which
+  doesn't make much sense. For now, I set it to 1.0, but this should probably
+  be customizable.
 - mat3: The toEuler*() methods were broken. Depending on the angles, they
   could return invalid values.
 - sl/noise: When only cgkit light was installed, the sl module couldn't be
